2000-02-17  Federico Di Gregorio  <fog@debian.org>

	* connection.py, entry.py: lots of fixes. no new features.

2000-02-15  Federico Di Gregorio  <fog@debian.org>

	* connection.py, entry.py: genereal cleanup and better integration
	of the two classes. now every change to an entry (even a die())
	simply sets a flag: changes are postponed until next commit(). 

2000-02-11  Federico Di Gregorio  <fog@debian.org>

	* lappo: added GtkPane, better widget disposition, search filter
	works.
	
	* connection.py, entry.py: susbstituted ugly (!(dn=*)) filter with
	objectclass=*. that's not only nicier, it also guarantee that the
	returned objects actually have an objectclass.