@@ -18,8 +18,10 @@
 ##
 ## -*- Mode: python -*-
 
-import string, re, ldap
+import ldap, re
+from string import lower
 from ldap import LDAPError, canonical_dn
+from types import *
 
 
 class LDAPEntry:
@@ -27,8 +29,9 @@ class LDAPEntry:
 
     STATUS_REAL = 1
     STATUS_NEW = 2
-    STATUS_GHOST = 3
-    STATUS_ZOMBIE = 4
+    STATUS_GHOST = 4
+    STATUS_ZOMBIE = 8
+    STATUS_MODIFIED = 256
     
     def __init__(self, dn, connection=None, attrs=None, internal=None):
         """Initialize the entry.
@@ -43,78 +46,111 @@ class LDAPEntry:
         """
         self.dn = dn
         self.rdn = dn
+        self.classes = []
         self.ancestor = None
         self.childrens= {}
         self.data = {}
         self.attrl = None
-        self.__list_type_cache = type([])
-        self._connection = connection
+        self.connection = connection
+        self.schema = None
         
         if connection:
             LDAPEntry.reload(self, dn, attrs)
         elif attrs:
             if internal:
                 self.status = LDAPEntry.STATUS_REAL
-                self._connection = internal
+                self.connection = internal
             else:
                 self.status = LDAPEntry.STATUS_GHOST
             for k in attrs.keys():
                 LDAPEntry.__setitem__(self, k, attrs[k], 0)
 
-    # some methods used to make the class work as a dictionary
+    # some methods used to make the class work as a dictionary, with multiple
+    # entries for every key (some high level functions for single-value
+    # addition and deletion are provided below)
+    
     def __setitem__(self, key, value, changed=1):
+        key = lower(key)
         if key == 'dn':
             self.dn = dn
-            if self.ancestor != None: self.set_ancestor(self.ancestor)
+            if self.ancestor != None:
+                self.set_ancestor(self.ancestor)
         else:
-            if type(value) != self.__list_type_cache: value = [value]
-            self.data[key] = (value, changed)
+            if type(value) != ListType: value = [value]
+            if key == 'objectclass': self.classes = value
+            else: self.data[key] = (value, changed)
+        self.status = self.status | LDAPEntry.STATUS_MODIFIED
+            
     def __getitem__(self, key):
+        key = lower(key)
         if key == 'dn': return self.dn
+        elif key == 'objectclass': return self.classes
         elif self.data[key][1] != 2: return self.data[key][0]
+        
     def __delitem__(self, key):
-        if key == 'dn': raise LDAPError, ({'desc':'cannot delete dn'})
+        key = lower(key)
+        if key == 'dn': raise LDAPError('cannot delete dn')
+        elif key == 'objectclass': self.classes = []
         else: self.data[key] = (self.data[key][0], 2)
+        self.status = self.status | LDAPEntry.STATUS_MODIFIED
+        
     def __purge__(self):
         for k in self.data.keys():
             if self.data[k][1] == 2: del self.data[k]
+        self.status = self.status | LDAPEntry.STATUS_MODIFIED
+            
     def __len__(self):
-        return len(self.data)+1
+        return len(self.data)+2
+    
     def keys(self):
         return self.data.keys()
+
     def has_key(self, key):
         return self.data.has_key(key)
+
     def values(self):
         l = []
         for k in self.data.keys():
             l.append(self.data[k][0])
         return l
+
     def items(self):
         l = []
         for k in self.data.keys():
             l.append((k, self.data[k][0]))
         return l
 
-    # basic operations on *single* attribute values  (get is pretty bad)
-    def get(self, key, default=None):
-        return self.data.get(key, (default,))[0]
-    def set(self, key, value):
+    # basic operations on *single* attribute values (note that get *never*
+    # return a single value, it always return a list!)
+    def get(self, key, default=[]):
         if self.data.has_key(key) and self.data[key][1] < 2:
-            self.data[key] = (self.data[key][0]+[value], 1)
+            return self.data[key][0]
         else:
-            self.data[key] = ([value], 1)
+            return default
+    
+    def set(self, key, *values):
+        if self.data.has_key(key) and self.data[key][1] < 2:
+            self.data[key] = (self.data[key][0]+values, 1)
+        else:
+            self.data[key] = (values, 1)
+        self.status = self.status | LDAPEntry.STATUS_MODIFIED
+
     def replace(self, key, oldvalue, newvalue):
         i = self.data[key][0].index(oldvalue)
         self.data[key][0][i:i+1] = [newvalue]
         self.data[key] = (self.data[key][0], 1)
-    def delete(self, key, value):
-        self.data[key][0].remove(value)
+        self.status = self.status | LDAPEntry.STATUS_MODIFIED
+
+    def delete(self, key, *values):
+        for v in values:
+            self.data[key][0].remove(v)
         self.data[key] = (self.data[key][0], 1)
+        self.status = self.status | LDAPEntry.STATUS_MODIFIED
             
     def __str__(self):
         """Return the ldif rapresentation of this object."""
         str = "dn: %s\n" % self.dn
-        classes = self.get('objectClass', []) + self.get('objectclass', []) 
+        classes = self.classes
         for oc in classes:
             str = str + "objectClass: %s\n" % oc
         for k in self.data.keys():
@@ -125,12 +161,12 @@ class LDAPEntry:
     
     def __check_connection(self):
         """Raise an exception if the connection to the directory is missing."""
-        if self._connection == None:
-            raise LDAPError, ({'desc':'missing connection'})
+        if self.connection == None:
+            raise LDAPError('missing connection')
 
     def set_connection(self, connection):
         """Set the connection this object should use for directory access."""
-        self._connection = connection
+        self.connection = connection
         self.reload(self.dn, self.attrl)
         
     def set_ancestor(self, ancestor):
@@ -147,13 +183,14 @@ class LDAPEntry:
     def reload(self, dn, attrl=None):
         """Initialize itself from given dn.
 
-           If the given dn is not available on the current connection,
-           this entry is marked as NEW."""
+        If the given dn is not available on the current connection,
+        this entry is marked as NEW.
+        """
         self.__check_connection()
         self.attrl = attrl
         try:
-	    data = self._connection._raw_search('objectclass=*',
-                                                dn, ldap.SCOPE_BASE, attrl)
+	    data = self.connection._search('objectclass=*',
+                                           dn, ldap.SCOPE_BASE, attrl)
             data = data[0][1]
             for k in data.keys():
                 LDAPEntry.__setitem__(self, k, data[k], 0)
@@ -169,7 +206,7 @@ class LDAPEntry:
            using its rdn as the key. childrens is the returned for commodity.
         """
         self.__check_connection()
-        childs = self._connection.browse(filter, self.dn, attrl)
+        childs = self.connection.finder.browse(filter, self.dn, attrl)
         self.childrens = {}
         for child in childs:
             child.set_ancestor(self)
@@ -196,29 +233,37 @@ class LDAPEntry:
            one. Attributes not found in this object are deleted!
         """
 	mod = []
+
         if self.status == LDAPEntry.STATUS_GHOST:
             raise LDAPError('cannot commit a ghost entry')
-        elif self.status == LDAPEntry.STATUS_ZOMBIE:
-            self._connection._delete(self.dn)
-            self.status = LDAPEntry.STATUS_NEW
+
+        elif self.status == LDAPEntry.STATUS_REAL:
+            if self.status & LDAPEntry.STATUS_MODIFIED:
+                old = self.connection.find(self.dn)
+                for k in self.keys():
+                    if old.has_key(k):
+                        if self.data[k][1] == 2:
+                            # delete attribute from server
+                            mod.append((ldap.MOD_DELETE, k, None))
+                        elif self.data[k][1] == 1:
+                            # modify existing attribute
+                            mod.append((ldap.MOD_REPLACE, k, self.data[k][0]))
+                        else:
+                            if self.data[k][1] == 1:
+                                mod.append((ldap.MOD_ADD, k, self.data[k][0]))
+                self.connection._modify(self.dn, mod)
+                self.__purge__()
+                self.status = LDAPEntry.STATUS_REAL
+
         elif self.status == LDAPEntry.STATUS_NEW:
             for k in self.keys():
                 mod.append((k, self.data[k][0]))
-            self._connection._add(self.dn, mod)
+            self.connection._add(self.dn, mod)
             self.status = LDAPEntry.STATUS_REAL
-        elif self.status == LDAPEntry.STATUS_REAL:
-            old = self._connection.find(self.dn)
-            for k in self.keys():
-                if old.has_key(k):
-                    if self.data[k][1] == 2:    # delete attribute from server
-                        mod.append((ldap.MOD_DELETE, k, None))
-                    elif self.data[k][1] == 1:  # modify existing attribute
-                        mod.append((ldap.MOD_REPLACE, k, self.data[k][0]))
-                    else:
-                        if self.data[k][1] == 1:
-                            mod.append((ldap.MOD_ADD, k, self.data[k][0]))
-            self._connection._modify(self.dn, mod)
-            self.__purge__()
+
+        elif self.status == LDAPEntry.STATUS_ZOMBIE:
+            self.connection._delete(self.dn)
+            self.status = LDAPEntry.STATUS_NEW
 
     def die(self):
         """Remove this entry from the directory on next commit()."""
